Add Bintray configuration

--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,16 @@
 	<version>0.0.2-SNAPHOT</version>
 	<packaging>jar</packaging>
 	<name>Ligoj - Plugin QA (Quality Assurance)</name>
+
+	<profiles>
+		<profile>
+			<id>bintray</id>
+			<distributionManagement>
+				<repository>
+					<id>bintray-ligoj-maven-repo</id>
+					<url>https://api.bintray.com/maven/ligoj/maven-repo/plugin-qa/;publish=1</url>
+				</repository>
+			</distributionManagement>
+		</profile>
+	</profiles>
 </project>
