--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.ligoj.api</groupId>
 		<artifactId>plugin-parent</artifactId>
-		<version>3.2.4</version>
+		<version>3.2.11</version>
 		<relativePath />
 	</parent>
 
@@ -25,11 +25,11 @@
 
 	<profiles>
 		<profile>
-			<id>bintray</id>
+			<id>github</id>
 			<distributionManagement>
 				<repository>
-					<id>bintray-ligoj-maven-repo</id>
-					<url>https://api.bintray.com/maven/ligoj/maven-repo/plugin-qa/;publish=1</url>
+					<id>github-ligoj</id>
+					<url>https://maven.pkg.github.com/ligoj/plugin-qa</url>
 				</repository>
 			</distributionManagement>
 		</profile>
