chore: bump plugin-api to v4.1.8

--- a/pom.xml
+++ b/pom.xml
@@ -1,37 +1,38 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.ligoj.api</groupId>
-		<artifactId>plugin-parent</artifactId>
-		<version>4.1.7</version>
-		<relativePath />
-	</parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.ligoj.api</groupId>
+        <artifactId>plugin-parent</artifactId>
+        <version>4.1.8</version>
+        <relativePath/>
+    </parent>
 
-	<groupId>org.ligoj.plugin</groupId>
-	<artifactId>plugin-qa</artifactId>
-	<version>1.1.2-SNAPSHOT</version>
-	<packaging>jar</packaging>
-	<name>Ligoj - Plugin QA (Quality Assurance)</name>
+    <groupId>org.ligoj.plugin</groupId>
+    <artifactId>plugin-qa</artifactId>
+    <version>1.1.2-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>Ligoj - Plugin QA (Quality Assurance)</name>
 
-	<scm>
-		<connection>scm:git:https://github.com/ligoj/plugin-qa</connection>
-		<developerConnection>scm:git:https://github.com/ligoj/plugin-qa</developerConnection>
-		<url>https://github.com/ligoj/plugin-qa.git</url>
-	</scm>
+    <scm>
+        <connection>scm:git:https://github.com/ligoj/plugin-qa</connection>
+        <developerConnection>scm:git:https://github.com/ligoj/plugin-qa</developerConnection>
+        <url>https://github.com/ligoj/plugin-qa.git</url>
+    </scm>
 
-	<properties>
-		<sonar.sources>src/main/java</sonar.sources>
-	</properties>
+    <properties>
+        <sonar.sources>src/main/java</sonar.sources>
+    </properties>
 
-	<profiles>
-		<profile>
-			<id>github</id>
-			<distributionManagement>
-				<repository>
-					<id>github-ligoj</id>
-					<url>https://maven.pkg.github.com/ligoj/plugin-qa</url>
-				</repository>
-			</distributionManagement>
-		</profile>
-	</profiles>
+    <profiles>
+        <profile>
+            <id>github</id>
+            <distributionManagement>
+                <repository>
+                    <id>github-ligoj</id>
+                    <url>https://maven.pkg.github.com/ligoj/plugin-qa</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
